feat: update sitemap.xml with new URLs and modify vercel.json formatting

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,20 @@
 {
-    "$schema": "https://openapi.vercel.sh/vercel.json",
-    "git": {
-        "productionBranch": "main",
-        "deploymentEnabled": {
-            "main": true,
-            "*": false
-        }
-    },
-    "github": {
-        "autoAlias": true,
-        "autoJobCancelation": true
-    }
+	"$schema": "https://openapi.vercel.sh/vercel.json",
+	"git": {
+		"productionBranch": "main",
+		"deploymentEnabled": {
+			"main": true,
+			"*": false
+		}
+	},
+	"github": {
+		"autoAlias": true,
+		"autoJobCancelation": true
+	},
+	"rewrites": [
+		{
+			"source": "/(.*)",
+			"destination": "/index.html"
+		}
+	]
 }
